# parol6

./: .gitignore  README.md  analytics.db  move_goal.yaml  pipeline_analytics.db
IFRA_ConveyorBelt/conveyorbelt_gazebo/models/conveyor_belt/: model.sdf
IFRA_ConveyorBelt/conveyorbelt_msgs/: CMakeLists.txt  package.xml
IFRA_ConveyorBelt/conveyorbelt_msgs/srv/: MoveDistance.srv
IFRA_ConveyorBelt/ros2_conveyorbelt/src/: ros2_conveyorbelt_plugin.cpp
attach_detach/: attach_detach.cc
box_spawner/: CMakeLists.txt  package.xml
box_spawner/src/: box_spawner.cpp  box_spawner_plugin.cpp
camera_tf_publisher_plugin/: CMakeLists.txt  package.xml
camera_tf_publisher_plugin/src/: camera_tf_publisher_plugin.cpp
flask_app/: app.py
flask_app/templates/: index.html
parol6_description/: CMakeLists.txt  package.xml
parol6_description/meshes/: L1.dae  L2.dae  L3.dae  L4.dae  L5.dae  L6.dae  base_link.dae  vaccum_gripper.stl  vaccum_gripper_holder.stl
parol6_description/urdf/: PAROL6.urdf  camera_module.urdf.xacro  parol6.transmission.xacro  parol6.urdf.xacro  parol6_base.urdf.xacro
parol6_gazebo/: package.xml  setup.cfg  setup.py
parol6_gazebo/models/RealSense_D435/: model.sdf
parol6_gazebo/models/intel_d435_camera/: model.config  model.sdf
parol6_gazebo/worlds/: table.world  table1.world
parol6_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  ui_mainwindow.h
parol6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
parol6_moveit2_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  moveit_servo.yaml  parol6.ros2_control.xacro  parol6.srdf  parol6.urdf.xacro  parol6_servo.yaml  ros2_controllers.yaml
parol6_moveit2_config/launch/: bringup.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  test_gazebo.launch.py  warehouse_db.launch.py
parol6_moveit2_config/parol6_moveit_config/: .setup_assistant
parol6_moveit2_config/parol6_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
parol6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
parol6_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  parol6.ros2_control.xacro  parol6.srdf  parol6.urdf.xacro  ros2_controllers.yaml
parol6_moveit_config/launch/: moveit_rviz.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
parol6_pipeline/: CMakeLists.txt  package.xml
parol6_pipeline/include/parol6_pipeline/: box_detector.hpp  pick_controller.hpp  pipeline_subsystems.hpp
parol6_pipeline/launch/: pipeline.launch.py  standalone_pick_controller.launch.py
parol6_pipeline/src/: analytics_logger_node.cpp  box_detector.cpp  pick_and_place_pose_node.cpp  pick_controller.cpp  pipeline.cpp  pipeline_fsm_node.cpp
parol6_pose_saver/: CMakeLists.txt  package.xml
parol6_pose_saver/launch/: pose_saver.launch.py
parol6_pose_saver/src/: pose_saver.cpp
robot_data/: Targets.json  saved_joint_poses.yaml
