<?xml version="1.0"?>
<package format="3">
  <name>parol6_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for PAROL6</p>
    <p>This package contains configuration data, 3D models and launch files
for PAROL6 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
