<?xml version="1.0"?>
<package format="3">
  <name>parol6_moveit2_config</name>
  <version>0.3.0</version>
  <description>
    MoveIt 2 configuration package for the parol6 robot arm.
  </description>

  <maintainer email="filip.zoric@crobotics.tech">filip zoric</maintainer>
  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit2</url>

  <author email="filip.zoric@crobotics.tech">filip zoric</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt dependencies -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>

  <!-- Robot state and publishing -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Gazebo and controller dependencies -->
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <!-- RViz visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>

  <!-- Your description package -->
  <exec_depend>parol6_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
